tests/invalid/list_clear_wrong_arg_count/main.py
def run_case() -> None:
    xs: list[int] = [1, 2]
    xs.clear(1)


if __name__ == "__main__":
    run_case()
